Copy qca crypt libs to ./usr/lib

--- a/Recipe.erb
+++ b/Recipe.erb
@@ -51,6 +51,7 @@ rsync -aruxv --progress /opt/usr/share/ ./usr/share/
 rsync -aruxv --progress /opt/etc/ ./etc/
 rsync -aruxv --progress /opt/usr/qml/ ./qml
 cp /usr/lib/x86_64-linux-gnu/pulseaudio/*.so* ./usr/lib/
+cp /opt/usr/lib/qca-qt5/crypto/* ./usr/lib/
 
 cp /opt/usr/bin/gst* ./usr/bin/
 mkdir ./lib
