--- a/Recipe.erb
+++ b/Recipe.erb
@@ -45,20 +45,19 @@ cp -rfv /opt/usr/plugins/<%= name %> ./plugins || true
 #mkdir -p ./usr/lib/qml/
 mkdir -p ./usr/{share,bin,lib}
 mkdir ./etc
-rsync -aruxv --progress /opt/usr/plugins/kf5/ ./plugins/
 rsync -aruxv --progress /opt/usr/plugins/ ./plugins/
 rsync -aruxv --progress /opt/usr/share/ ./usr/share/
 rsync -aruxv --progress /opt/etc/ ./etc/
 rsync -aruxv --progress /opt/usr/qml/ ./qml
 cp /usr/lib/x86_64-linux-gnu/pulseaudio/*.so* ./usr/lib/
-cp /opt/usr/lib/qca-qt5/crypto/* ./usr/lib/
 
 cp /opt/usr/bin/gst* ./usr/bin/
+
 mkdir ./lib
 rm -rfv /opt/usr/lib/gstreamer-1.0/include
+cp /opt/usr/lib/qca-qt5/crypto/* ./lib/
 cp /opt/usr/lib/gstreamer-1.0/* ./lib/
 cp /usr/lib/x86_64-linux-gnu/pulseaudio/*.so* ./lib/
-cp -rfv /usr/share/mime ./usr/share/
 cp /etc/mime.types ./etc/
 update-mime-database ./usr/share/mime
 
