--- a/Recipe.erb
+++ b/Recipe.erb
@@ -55,7 +55,7 @@ cp /opt/usr/bin/gst* ./usr/bin/
 
 mkdir ./lib
 rm -rfv /opt/usr/lib/gstreamer-1.0/include
-cp /opt/usr/lib/qca-qt5/crypto/* ./lib/
+cp /opt/usr/lib/qca-qt5/crypto/* ./plugins/
 cp /opt/usr/lib/gstreamer-1.0/* ./lib/
 cp /usr/lib/x86_64-linux-gnu/pulseaudio/*.so* ./lib/
 cp /etc/mime.types ./etc/
